--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
         background: rgba(13, 119, 248, 0.6);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
-    "chart.js": "https://aistudiocdn.com/chart.js@^4.4.3",
-    "react-chartjs-2": "https://aistudiocdn.com/react-chartjs-2@^5.2.0",
-    "xlsx": "https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js",
-    "chartjs-plugin-zoom": "https://aistudiocdn.com/chartjs-plugin-zoom@^2.0.1"
+    "react-chartjs-2": "https://aistudiocdn.com/react-chartjs-2@^5.3.1",
+    "chart.js": "https://aistudiocdn.com/chart.js@^4.5.1",
+    "chartjs-plugin-zoom": "https://aistudiocdn.com/chartjs-plugin-zoom@^2.2.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
@@ -59,6 +61,7 @@
 </head>
   <body class="bg-gray-900 text-gray-100">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+    <script type="module" src="/src/index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
